Removed double auth